--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,24 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@tanstack/react-query": "^5.20.0",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "keycloak-js": "^23.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "@mui/material": "^5.14.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/lab": "^5.0.0-alpha.56",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "axios": "^1.6.0",
-    "@tanstack/react-query": "^5.20.0",
-    "keycloak-js": "^22.0.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.3.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/node": "^20.0.0",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.5.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19"
   },
   "scripts": {
     "start": "react-scripts start",
