--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,12 @@ services:
     image: postgres:16-alpine
     container_name: nap-postgres
     environment:
-      POSTGRES_DB: network_access_portal
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: network_access_portal
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     ports:
       - "5432:5432"
     healthcheck:
@@ -19,7 +20,7 @@ services:
       retries: 5
 
   keycloak:
-    image: keycloak/keycloak:22.0.0
+    image: quay.io/keycloak/keycloak:23.0
     container_name: nap-keycloak
     environment:
       KEYCLOAK_ADMIN: admin
@@ -28,7 +29,9 @@ services:
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
       KC_DB_USERNAME: postgres
       KC_DB_PASSWORD: password
+      KC_HOSTNAME_STRICT: "false"
       KC_PROXY: edge
+      KC_HTTP_ENABLED: "true"
     ports:
       - "8080:8080"
     depends_on:
@@ -36,8 +39,6 @@ services:
         condition: service_healthy
     command:
       - "start-dev"
-    volumes:
-      - keycloak_data:/opt/keycloak/data
 
   backend:
     build:
@@ -85,7 +86,6 @@ services:
 
 volumes:
   postgres_data:
-  keycloak_data:
 
 networks:
   default:
