Refactor: Use separate PostgreSQL containers for app and Keycloak

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,43 @@
 version: '3.8'
 
 services:
-  postgres:
+  postgres-app:
     image: postgres:16-alpine
-    container_name: nap-postgres
+    container_name: nap-postgres-app
     environment:
+      POSTGRES_DB: network_access_portal
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: postgres
-      POSTGRES_MULTIPLE_DATABASES: network_access_portal,keycloak
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./postgres-init:/docker-entrypoint-initdb.d
+      - postgres_app_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d network_access_portal"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - nap-network
+
+  postgres-keycloak:
+    image: postgres:16-alpine
+    container_name: nap-postgres-keycloak
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+    volumes:
+      - postgres_keycloak_data:/var/lib/postgresql/data
+    ports:
+      - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d keycloak"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - nap-network
 
   keycloak:
     image: quay.io/keycloak/keycloak:23.0
@@ -27,7 +46,7 @@ services:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_URL: jdbc:postgresql://postgres-keycloak:5432/keycloak
       KC_DB_USERNAME: postgres
       KC_DB_PASSWORD: password
       KC_HOSTNAME_STRICT: "false"
@@ -36,10 +55,12 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      postgres:
+      postgres-keycloak:
         condition: service_healthy
     command:
       - "start-dev"
+    networks:
+      - nap-network
 
   backend:
     build:
@@ -47,7 +68,7 @@ services:
       dockerfile: Dockerfile
     container_name: nap-backend
     environment:
-      DATABASE_URL: postgresql://postgres:password@postgres:5432/network_access_portal
+      DATABASE_URL: postgresql://postgres:password@postgres-app:5432/network_access_portal
       KEYCLOAK_SERVER_URL: http://keycloak:8080
       KEYCLOAK_REALM: network-access
       KEYCLOAK_CLIENT_ID: network-portal
@@ -60,13 +81,15 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      postgres:
+      postgres-app:
         condition: service_healthy
       keycloak:
         condition: service_started
     volumes:
       - ./backend/app:/app/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - nap-network
 
   frontend:
     build:
@@ -84,10 +107,13 @@ services:
       - backend
     volumes:
       - ./frontend/src:/app/src
+    networks:
+      - nap-network
 
 volumes:
-  postgres_data:
+  postgres_app_data:
+  postgres_keycloak_data:
 
 networks:
-  default:
-    name: nap-network
+  nap-network:
+    driver: bridge
