Update: Add actual Keycloak client secret to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       KEYCLOAK_SERVER_URL: http://keycloak:8080
       KEYCLOAK_REALM: network-access
       KEYCLOAK_CLIENT_ID: network-portal
-      KEYCLOAK_CLIENT_SECRET: your-client-secret
+      KEYCLOAK_CLIENT_SECRET: jFikLcJRiv9ERt4guZbYGNQKi7nlLVpU
       SECRET_KEY: your-secret-key-change-in-production
       DEBUG: "False"
       BACKEND_HOST: 0.0.0.0
